--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
-.App {
-  text-align: center;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #555;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.todo-form input{
+    height: 40px;
+    width: 300px;
+    padding-left: 10px;
+    outline: none;
+    background: #4A95D6;
+    border-radius: 5px;
+    font-size: 16px;
+    
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+::placeholder{
+    font-size: 16px;
+    color: #fff;
 }
-
-.App-link {
-  color: #61dafb;
+.todo-form button{
+    height: 40px;
+    font-size: 16px;
+    margin-left: 5px;
+    outline: none;
+    background-color: #4A95D6;
+    border-radius: 5px solid #fff;
+    outline: none;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.text{
+    font-size: 20px;
+    color: #fff;
+}
+.delete-icon{
+    font-size: 24px;
+    color: #fff;
+}
+.edit-icon{
+    font-size: 24px;
+    color: #fff;
+    margin-left: 5px;
 }
